# multi-vitamin-comparator

./: .envrc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  README.rst  cliff.toml  dev_workflow_gitflow.rst  dev_workflow_github_flow.rst  dev_workflow_trunk.rst  flake.nix  pyproject.toml  pyrightconfig.json  setup-dev.sh
.github/workflows/: configure_repo.yml  dev_pr.yml  main_push.yml  publish_on_tag.yml  release.yml  sync_main_to_dev.yml
docs/: conf.py  index.rst  installation.rst
scripts/init/: commit-and-push.sh  configure-project.sh  ensure-dependencies.sh  get-repo-info.sh  local-configure-repo.sh  setup-core-settings.sh  setup-project-metadata.sh  setup-rulesets.sh  setup-topics.sh  setup-venv.sh  setup-workflow-permissions.sh
src/multi_vitamin_comparator/: __init__.py  compare_supplements.py  extract_multivitamin_ingredients.py
tests/: conftest.py
tests/package_name/: test_sample.py
