[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "multi-vitamin-comparator"
description = "Small program to compare a list of multi vitamin products to a target product"
dynamic = ["version"]
authors = [
    { name = "Javier Moralejo Piñas", email = "j.moralejo.pinas@gmail.com" },
]
readme = "README.rst"
license = { text = "MIT" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = ["openai", "pydantic"]

[project.urls]
Homepage = "https://github.com/j-moralejo-pinas/multi-vitamin-comparator"
Changelog = "https://multi-vitamin-comparator.readthedocs.io/en/latest/CHANGELOG.html"
Source = "https://github.com/j-moralejo-pinas/multi-vitamin-comparator"
Documentation = "https://multi-vitamin-comparator.readthedocs.io/"
Tracker = "https://github.com/j-moralejo-pinas/multi-vitamin-comparator/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = []

[tool.hatch.build.targets.wheel]
packages = ["src/multi_vitamin_comparator"]
exclude = ["/tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyright[nodejs]",
    "pre-commit",
    "ruff",
    "pydoclint",
    "docformatter",
    "pytest",
    "pytest-cov",
    "pyupgrade",
]
docs = ["sphinx", "sphinx-autoapi", "sphinx-linkfix", "sphinx-rtd-theme"]
format = ["ruff", "docformatter", "pyupgrade"]
code-quality = ["ruff", "pydoclint", "pyright[nodejs]"]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "-ra --strict-markers"
# norecursedirs = ["build", "dist"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = []

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
ignore = [
    "S101",    # Use of `assert` for testing purposes
    "COM812",  # Add commas at the end of an iterable
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TD003",   # Missing issue link for this TODO
    "FIX001",  # Line contains FIXME, consider resolving the issue
    "FIX002",  # Line contains TODO, consider resolving the issue
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
]
select = ["ALL"]
exclude = ["docs/*"] # "tests/*"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "SLF001",  # Private member accessed
    "PLR2004", # Magic value used in comparison
    "INP001",  # File is part of an implicit namespace package.
]
"src/multi_vitamin_comparator/_version.py" = ["ALL"]

[tool.pydoclint]
style = 'numpy'

[tool.docformatter]
style = 'numpy'
wrap-summaries = 88
wrap-descriptions = 88
pre-summary-newline = true
close-quotes-on-newline = true

[tool.vulture]
# min_confidence = 80
paths = ["src", "tests"]

[tool.bandit]
skips = ["B101"]

[tool.cicd]
workflow = "trunk"
